<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeGraph">

    <navigation android:id="@+id/homeGraph" app:startDestination="@id/navigation_home">
        <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.mygithubapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" >
            <action
                android:id="@+id/action_navigation_home_to_resultsFragment"
                app:destination="@id/user_results" />
        </fragment>
        <fragment
            android:id="@+id/user_results"
            android:name="com.example.mygithubapp.ui.results.ResultsFragment"
            android:label="@string/title_search_results"
            tools:layout="@layout/fragment_user_results" >
            <argument
                android:name="query_user_name"
                app:argType="string" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mygithubapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
        <action
            android:id="@+id/action_dashboardFragment_to_homeGraph"
            app:destination="@id/homeGraph" />


</navigation>